# google_ads_mcp

./: .env.template  .gitignore  GEMINI.md  README.md  campaign_spend.py  check_hierarchy.py  generate_refresh_token.py  google-ads.yaml.template  kip_performance.py  list_accounts.py  pyproject.toml  top_spenders.py  top_spenders_997.py
.claude/: CLAUDE.md  accounts.json
.claude/agents/: brainy.md  briefly.md  channel-performance-scheduler.md  check-model-pricing.md  gemini.md  githuby.md  image-finder.md  inboxy.md  newsletter-idea-extractor.md  posty.md  scripty.md  update-doc.md  youtube-idea-extractor.md
.claude/commands/: fetch.md  gemini.md  template.md
.claude/skills/gaql-query-builder/: SKILL.md
.claude/skills/google-ads-account-info/: SKILL.md
.claude/skills/google-ads-campaign-performance/: SKILL.md
ads_mcp/: coordinator.py  server.py  utils.py
ads_mcp/tools/: api.py  docs.py
scripts/: generate_views.py
tests/scripts/: test_generate_views.py
