[project]
name = "google-ads-api-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Du, Meng", email = "mengd@google.com" },
    { name = "Chang, Hugo", email = "hugochang@google.com" },
]

license = "Apache-2.0"
license-files = ["LICENSE"]

dependencies = [
    "google-ads>=27.0.0",
    "httpx[http2]>=0.28.1",
    "mcp[cli]>=1.12.2",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pyink>=24.10.1",
    "pylint>=3.3.7",
    "pytest>=8.3.2",
    "pytest-mock>=3.12.0",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
pyink-indentation = 2
pyink-use-majority-quotes = true
line-length = 79

[tool.pytest.ini_options]
pythonpath = ["."]
